# fontforge

./: .appveyor.yml  .clang-files  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: main.yml
Unicode/: ustring.c
cmake/: FontForgeConfigure.cmake  TestUtils.cmake
desktop/: org.fontforge.FontForge.appdata.xml.in
doc/: manifest.txt
fontforge/: CMakeLists.txt  asmfpst.c  autohint.c  autotrace.c  baseviews.h  bitmapchar.c  bitmapcontrol.c  cairo_painter.cpp  cairo_painter.hpp  cvexport.c  cvexport.cpp  cvundoes.c  dumppfa.c  encoding.c  featurefile.c  fffreetype.h  ffpython.h  fontforgeui.h  fontviewbase.c  freetype.c  glyphcomp.c  groups.c  lookups.c  lookups.h  metrics.h  mm.c  noprefs.c  nowakowskittfinstr.c  othersubrs.c  parsepdf.c  parsettf.c  parsettfatt.c  plugin.c  plugin.h  print.c  print.cpp  print.h  python.c  scripting.c  scripting.h  (+22 more)
fontforge/cgal/: CMakeLists.txt  remove_overlap.cpp  remove_overlap.hpp
fontforge/layout/: CMakeLists.txt  i_printer.hpp  legacy_printer.cpp  legacy_printer.hpp
fontforge/shapers/: builtin.cpp  builtin.hpp  harfbuzz.cpp  harfbuzz.hpp  i_shaper.hpp  shaper_shim.cpp  (+1 more)
fontforgeexe/: CMakeLists.txt  anchorsaway.c  bdfinfo.c  bitmapdlg.c  bitmapview.c  charinfo.c  charview.c  combinations.c  contextchain.c  cvexportdlg.c  cvfreehand.c  cvgetinfo.c  cvgridfit.c  cvimportdlg.c  cvpointer.c  deltaui.c  displayfonts.c  encodingui.c  fontinfo.c  fontview.c  fvfontsdlg.c  gotodlg.c  groupsdlg.c  histograms.c  histograms.cpp  kernclass.c  layer2layer.c  lookupui.c  macencui.c  main.cpp  math.c  metricsview.c  mmdlg.c  multidialog.c  nonlineartransui.c  openfontdlg.c  pluginui.c  prefs.c  problems.c  problems.cpp  (+11 more)
fontforgeexe/gtk/: CMakeLists.txt  application.cpp  application.hpp  c_context.h  char_grid.cpp  colour.cppm  common_menus.cpp  common_menus.hpp  css_builder.cpp  dialog.cpp  dialog.hpp  dialog_base.cpp  dialog_base.hpp  dialogs.cpp  dialogs.hpp  find_problems.cpp  font_view.cpp  font_view.hpp  font_view_menu.cpp  font_view_menu.hpp  font_view_shim.cpp  font_view_shim.hpp  kerning_format.cpp  kerning_format.hpp  language_list.cpp  menu_builder.cpp  menu_builder.hpp  menu_ids.h  open_dialog.cpp  open_dialog.cppm  open_dialog.hpp  open_dialog_shim.cpp  open_dialog_shim.hpp  open_filters.hpp  plugin_config.cpp  plugin_config.hpp  print_dialog.cpp  print_preview.cpp  select_glyphs.cpp  select_glyphs.hpp  (+8 more)
fontforgeexe/gtk/widgets/: CMakeLists.txt  draggable_list_box.cpp  draggable_list_box.hpp  histogram.cpp  histogram.hpp  rich_text_editor.cpp  verified_entry.cpp  verified_entry.hpp
gdraw/: CMakeLists.txt  gaskdlg.c  gbuttons.c  gdlist.c  gdraw.c  gdrawP.h  gfilechooser.c  ggadgetP.h  ggadgets.c  ggdkcdraw.c  ggdkdraw.c  ggdkdrawP.h  gmatrixedit.c  gresedit.c  gresource.c  gtextfield.c  gtextinfo.c  gxdraw.c  hotkeys.c
gutils/: CMakeLists.txt  fsys.c
inc/: ffgdk.h  ffglib.h  ffglib.hpp  gdraw.h  ggadget.h  ustring.h
po/: LINGUAS  ar_SA.po  ca.po  de.po  el.po  en_GB.po  es.po  fr.po  hr.po  it.po  ja.po  ka_GE.po  ko.po  ml.po  pl.po  pt.po  ru.po  sv_SE.po  th_TH.po  tr_TR.po  uk.po  vi.po  zh_CN.po  zh_TW.po
pyhook/: CMakeLists.txt
tests/: CMakeLists.txt  bulk_test.sh  pyhook_smoketest.py  systestdriver.c  test0001.py  test1003.py  test_printing.py  test_py_invalid_objs.py
tests/fonts/printing_refs/: chars.ps  fontdisplay.ps  fontsample.ps  waterfall.ps
(+14 files in other folders)
